--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 <body>
     <h1>Probando mi primer git</h1>
     <h2>A ver el cambio</h2>
+    <nav>
+    <ul>
+        <li><a href="#">Hola</a></li>
+        <li><a href="#">Hola</a></li>
+        <li><a href="#">Hola</a></li>
+    </ul>
+    </nav>
+    <p>Esto es para probar</p>
 </body>
 </html>
