agregue el título

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Probando mi primer git</h1>
     <h2>A ver el cambio</h2>
+    <h3>Titulo</h3>
     <nav>
     <ul>
         <li><a href="#">Hola</a></li>
